--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "raw-body": "^2.4.1",
     "solc": "^0.8.4"
   },
   "engines": {
